fix: layout issue

--- a/personal-website/styles.css
+++ b/personal-website/styles.css
@@ -976,7 +976,7 @@ h3 {
   }
 
   .card-react {
-    top: 38%;
+    top: 70%;
     left: 0;
   }
 
